docker_deploy/kubernetes-stellan/examples/ingress-multi-ssl/yamls/my-mc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-mc-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pts-address
    networking.gke.io/managed-certificates: my-mc-certificate-1
spec:
  #tls:
  #- secretName: test-ingress-1-secret-name
  #- secretName: test-ingress-2-secret-name
  rules:
  #- host: pinetreesquare.com
  #  http:
  #    paths:
  #    - backend:
  #        serviceName: my-mc-service
  #        servicePort: my-first-port
  - host: v2.pinetreesquare.com
    http:
      paths:
      - backend:
          serviceName: my-mc-service
          servicePort: my-second-port
  - host: pinetreesquare.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-mc-service
          servicePort: my-first-port
      - path: /mynginx/*
        backend:
          serviceName: mynginx
          servicePort: 8080
      - path: /webtwo/*
        backend:
          serviceName: web2
          servicePort: 8080
      #- path: /v212b/*
      #  backend:
      #    serviceName: v212b
      #    servicePort: 8080
